base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-green-app
  labels:
    app: blue-green-app
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: blue-green-app
